# spectralmap

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/source/: api.rst  conf.py  index.rst  installation.rst  quickstart.ipynb  quickstart.rst
docs/source/_build/doctrees/: api.doctree  changelog.doctree  contributing.doctree  faq.doctree  index.doctree  installation.doctree  quickstart.doctree  references.doctree  rtd_setup.doctree
docs/source/_build/doctrees/tutorials/: 01_simulated_lightcurve.doctree  02_map_inversion.doctree  03_retrieval_workflow.doctree
docs/source/eclipse_mapping_notebooks/: WASP17b_MIRI_LRS.ipynb  build_wasp17b_miri_lrs_lightcurves.py
docs/source/eclipse_mapping_notebooks/data/: WASP17b_MIRI_LRS_x1dints_lightcurves.npz
docs/source/eclipse_mapping_notebooks/mast_downloads/: wasp17_mast_obs.json  wasp17_mast_products.json
docs/source/tutorials/: 04_demo_notebook.ipynb  Luhman16B_2023.ipynb  Luhman16B_2023_2024.ipynb  Luhman16B_2024.ipynb  Luhman16b_2023.ipynb  Luhman16b_Doppler.ipynb  Luhman_16B.ipynb  SIMP0136.ipynb  SIMP0136_Gaussian_mixture.ipynb  SIMP_0136.ipynb  WASP18b.ipynb  WASP43b.ipynb  WASP43b_MIRI.ipynb  WASP43b_NIRSpec.ipynb  doppler_radial_velocity_derivation.ipynb  index.rst  mathematical_framework.ipynb  paper_joint_plot.ipynb  pca_on_surface_spectra.ipynb  read_light_curves.ipynb  utilities.py
docs/source/user_guide/: concepts.rst  index.rst  inference.rst  lightcurves.rst  maps.rst  occultations.rst  optimization.rst  performance.rst  plotting.rst  spectral.rst
src/spectralmap/: __init__.py  bayesian_linalg.py  cluster.py  core.py  doppler.py  eclipse.py  gp.py  mapping.py  plotting.py  rotational.py  utilities.py
tests/: test_doppler_wind_evidence.py  test_gp.py  test_linalg.py  test_smoke.py  test_utilities.py
tools/: apply_papers_topic_lists.py  build_papers_author_sync_eval.py  build_papers_sync_eval.py  organize_papers_library.py
