[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectralmap"
version = "0.1.0"
description = "Template repo for spectral (wavelength-resolved) rotational + eclipse mapping"
readme = "README.md"
requires-python = "~=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = [
  "numpy~=1.21.1",
  "pandas<2.0.0",
  "matplotlib<3.8.0",
  "xarray<2023.1.0",
  "scipy<1.11",
  "theano-pymc==1.1.2",
  "aesara-theano-fallback==0.1.0",
  "starry",
  "exoplanet-core",
  "tqdm",
  "scikit-learn",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "pre-commit>=3.7"]
docs = [
  "sphinx>=7",
  "sphinx-rtd-theme>=2",
  "sphinx-autodoc-typehints>=2",
  "myst-parser>=2",
  "sphinx-copybutton>=0.5",
  "nbsphinx",
  "ipykernel",
  "sphinx-autobuild",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
